// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled is true 1`] = `
<div
  className="card_padding flex-100 flex-md-50 flex-gt-md-33"
  onClick={[Function]}
>
  <div
    className="card_route_pricing disabled margin_bottom flex"
  >
    <div
      className="top_routes"
    >
      <div>
        <p>
          From
          :
           
          <strong>
            <span>
               
              FOO-BAR
               
            </span>
          </strong>
        </p>
        <p>
          To
          :
           
          <strong>
            <span>
               
               
            </span>
          </strong>
        </p>
      </div>
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="bottom_routes"
    >
      <p>
        <strong>
           
          USERS_WITH_PRICING
           
        </strong>
         
        Clients
      </p>
      <p>
        <strong>
           
          4
           
        </strong>
         
        Pricing Count
      </p>
    </div>
  </div>
</div>
`;

exports[`pricing_count is falsy 1`] = `
<div
  className="card_padding flex-100 flex-md-50 flex-gt-md-33"
  onClick={[Function]}
>
  <div
    className="card_route_pricing  margin_bottom flex"
  >
    <div
      className="top_routes"
    >
      <div>
        <p>
          From
          :
           
          <strong>
            <span>
               
              FOO-BAR
               
            </span>
          </strong>
        </p>
        <p>
          To
          :
           
          <strong>
            <span>
               
               
            </span>
          </strong>
        </p>
      </div>
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="bottom_routes"
    >
      <p>
        <strong>
           
          USERS_WITH_PRICING
           
        </strong>
         
        Clients
      </p>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="card_padding flex-100 flex-md-50 flex-gt-md-33"
  onClick={[Function]}
>
  <div
    className="card_route_pricing  margin_bottom flex"
  >
    <div
      className="top_routes"
    >
      <div>
        <p>
          From
          :
           
          <strong>
            <span>
               
              FOO-BAR
               
            </span>
          </strong>
        </p>
        <p>
          To
          :
           
          <strong>
            <span>
               
               
            </span>
          </strong>
        </p>
      </div>
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="bottom_routes"
    >
      <p>
        <strong>
           
          USERS_WITH_PRICING
           
        </strong>
         
        Clients
      </p>
      <p>
        <strong>
           
          4
           
        </strong>
         
        Pricing Count
      </p>
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="card_padding flex-100 flex-md-50 flex-gt-md-33"
  onClick={[Function]}
>
  <div
    className="card_route_pricing  margin_bottom flex"
  >
    <div
      className="top_routes"
    >
      <div>
        <p>
          From
          :
           
          <strong>
            <span>
               
              FOO-BAR
               
            </span>
          </strong>
        </p>
        <p>
          To
          :
           
          <strong>
            <span>
               
               
            </span>
          </strong>
        </p>
      </div>
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "color": "#E0E0E0",
          }
        }
      />
    </div>
    <div
      className="bottom_routes"
    >
      <p>
        <strong>
           
          USERS_WITH_PRICING
           
        </strong>
         
        Clients
      </p>
      <p>
        <strong>
           
          4
           
        </strong>
         
        Pricing Count
      </p>
    </div>
  </div>
</div>
`;

exports[`users_with_pricing is falsy 1`] = `
<div
  className="card_padding flex-100 flex-md-50 flex-gt-md-33"
  onClick={[Function]}
>
  <div
    className="card_route_pricing  margin_bottom flex"
  >
    <div
      className="top_routes"
    >
      <div>
        <p>
          From
          :
           
          <strong>
            <span>
               
              FOO-BAR
               
            </span>
          </strong>
        </p>
        <p>
          To
          :
           
          <strong>
            <span>
               
               
            </span>
          </strong>
        </p>
      </div>
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="bottom_routes"
    >
      <p>
        <strong>
           
          4
           
        </strong>
         
        Pricing Count
      </p>
    </div>
  </div>
</div>
`;
